--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
     margin: 0;
     padding: 0;
     font-family: 'Oswald', sans-serif;
@@ -47,11 +47,12 @@ nav img{
     position: relative;
 }
 
-    .nav-links ul li a {
-        color: #F7C96E;
-        text-decoration: none;
-        font-size: 22px;
-    }
+.nav-links ul li a {
+    color: #F7C96E;
+    text-decoration: none;
+    font-size: 22px;
+
+}
 
 .nav-links ul li::after{
     content: '';
@@ -71,7 +72,7 @@ nav img{
     width: 90%;
     color: #fff;
     position: absolute;
-    top: 50%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
